test/tests/stages/14_pointers/invalid_types/cast_double_to_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const double(0.0)
  ;
  int
  *
  identifier(x)
  =
  (
  int
  *
  )
  identifier(d)
  ;
  return
  const int(0)
  ;
  }
